# omnect-ui

./: .dockerignore  .gitignore  BACKEND_TEST_CONCEPT.md  CLAUDE.md  Cargo.toml  Dockerfile  FRONTEND_TEST_CONCEPT.md  GEMINI.md  README.md  SHARED_TYPES_ANALYSIS.md  TEST_COVERAGE_ANALYSIS.md  build-and-deploy-image.sh  build-and-run-image.sh  build-arm64-image.sh  project-context.md  rust-2024.md
.github/: copilot-instructions.md.bak
config/omnect-device-service/: publish_endpoints.json.template
config/systemd/: omnect-ui.env.template  omnect-ui.service  omnect-ui.tmpfilesd
scripts/: build-and-deploy-image.sh  build-and-run-image.sh  build-frontend.sh  dev-setup.sh  generate-types.sh  run-e2e-tests.sh
src/: api.rs  certificate.rs  common.rs  config.rs  errors.rs  http_client.rs  keycloak_client.rs  lib.rs  main.rs  middleware.rs  network.rs  network_config.rs  omnect_device_service_client.rs  socket_client.rs
src/app/: Cargo.toml  README.md
src/app/src/: events.rs  http_helpers.rs  lib.rs  macros.rs  model.rs  types.rs  wasm.rs  wifi_psk.rs
src/app/src/capabilities/: centrifugo.rs
src/app/src/commands/: websocket.rs
src/app/src/types/: auth.rs  common.rs  device.rs  factory_reset.rs  mod.rs  network.rs  ods.rs  settings.rs  update.rs  websocket.rs  wifi.rs
src/app/src/update/: auth.rs  device.rs  mod.rs  ui.rs  websocket.rs  wifi.rs
src/app/src/update/device/: mod.rs  network.rs  operations.rs  reconnection.rs
src/app/src/update/device/network/: config.rs  form.rs  mod.rs  verification.rs
src/auth/: mod.rs  token.rs
src/backend/: Cargo.toml
src/backend/src/: api.rs  build.rs  config.rs  http_client.rs  keycloak_client.rs  lib.rs  main.rs  middleware.rs  omnect_device_service_client.rs  wifi_commissioning_client.rs
src/backend/src/services/: certificate.rs  firmware.rs  marker.rs  mod.rs  network.rs  settings.rs  websocket.rs
src/backend/tests/: README.md  http_client.rs  validate_portal_token.rs
src/backend/tests/common/: mocks.rs  utils.rs
src/backend/tests/fixtures/: README.md
src/services/: firmware.rs  mod.rs
src/services/auth/: authorization.rs  password.rs
src/shared_types/: Cargo.toml  build.rs
src/ui/: biome.json  package.json  playwright.config.ts  vite.config.ts
src/ui/src/: App.vue  main.ts  test-core.ts
src/ui/src/auth/: auth-service.ts  validate-portal-token.ts
src/ui/src/components/: BaseSideBar.vue  DeviceActions.vue  DeviceInfoCore.vue  DeviceNetworks.vue  NetworkActions.vue  NetworkSettings.vue  UpdateFileUpload.vue  UpdateInfo.vue  UserMenu.vue
src/ui/src/composables/: useCore.ts  (+2 more)
src/ui/tests/: auth.spec.ts  device.spec.ts  error-handling.spec.ts  factory-reset.spec.ts  network-config-comprehensive.spec.ts  network-configuration.spec.ts  network-multi-adapter.spec.ts  network-rollback.spec.ts  network.spec.ts  reboot.spec.ts  security.spec.ts  session-restore.spec.ts  settings.spec.ts  update-rollback.spec.ts  update.spec.ts  version-mismatch.spec.ts  wifi.spec.ts
static/: index.html
static/css/: styles.css
static/javascript/: omnect.js
tests/: http_client.rs  validate_portal_token.rs
vue/: .env  biome.json  package.json  vite.config.ts
vue/src/: App.vue  main.ts  uno.config.ts
vue/src/auth/: oidc.ts
vue/src/components/: BaseSideBar.vue  DeviceActions.vue  DeviceInfo.vue  DeviceNetworks.vue  OverlaySpinner.vue  UpdateFileUpload.vue  UpdateInfo.vue  UserMenu.vue
vue/src/composables/: useCentrifugo.ts  useOverlaySpinner.ts  useSnackbar.ts  useWaitReconnect.ts
vue/src/enums/: centrifuge-subscription-type.enum.ts
vue/src/pages/: Callback.vue  DeviceOverview.vue  DeviceUpdate.vue  Login.vue  SetPassword.vue
vue/src/plugins/: index.ts  router.ts  vuetify.ts
vue/src/theme/: theme.default.ts
vue/src/types/: device-info.ts  index.ts  update-manifest.ts
(+48 files in other folders)
