[workspace]
resolver = "2"
members = [
    "src/backend",
    "src/app",
    "src/shared_types",
]

[workspace.package]
authors = ["omnect@conplement.de"]
edition = "2024"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
repository = "git@github.com:omnect/omnect-ui.git"
version = "1.1.0"
