[package]
name = "omnect-ui-core"
description = "Crux Core for omnect-ui application"
readme = "../../README.md"
edition = "2021"

authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "omnect_ui_core"

[features]
typegen = ["crux_core/typegen", "crux_http/typegen"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("facet_typegen"))'] }

[dependencies]
crux_core = "0.16"
crux_http = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
lazy_static = "1.4"

[build-dependencies]
crux_core = { version = "0.16", features = ["typegen"] }
